Finish documentation for users with flasgger

--- a/api/v1/views/flasgger/users/users_user_id_get.yml
+++ b/api/v1/views/flasgger/users/users_user_id_get.yml
@@ -1,5 +1,5 @@
-Get an user by user_id
-Returns a an user by user_id
+Get a user by user_id
+Returns a a user by user_id
 ---
 paths:
   "/users/<user_id>":
