Finish documentation for place_amenities with flasgger

--- a/api/v1/views/flasgger/places/place_id_places_delete.yml
+++ b/api/v1/views/flasgger/places/place_id_places_delete.yml
@@ -12,3 +12,6 @@ parameters:
     in: "path"
     description: "ID of place to return"
     required: true
+responses:
+  "200":
+    description: Ok, deleted
