--- a/api/v1/views/flasgger/places_amenities/place_id_amenity_id_post.yml
+++ b/api/v1/views/flasgger/places_amenities/place_id_amenity_id_post.yml
@@ -1,19 +1,23 @@
-Get an amenity by amenity_id
-Returns a an amenity by amenity_id
+Add an amenity to a place
+Returns an amenity
 ---
 paths:
-  "/amenities/<amenity_id>":
+  "places/<place_id>/amenities/<amenity_id>":
 tags:
   - "amenity"
 description: ""
-operationId: "Deleteamenity"
+operationId: "Postamenityplace"
 parameters:
+  - name: "place_id"
+    in: "path"
+    description: "ID of amenity to return"
+    required: true
   - name: "amenity_id"
     in: "path"
-    description: "ID of amenity to delete"
+    description: "ID of amenity to return"
     required: true
 responses:
-  "200":
+  "201":
     description: List of objects attributes of amenities
     schema:
       properties:
